# hash-table-inspector

./: .gitignore  LICENSE  README.md  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/hammertomahawk/hashtableinspector/: InspectorViewModel.kt  MainActivity.kt  NativeHashSession.kt  NativeModels.kt
docs/: android-slice-status.md  architecture-plan.md  device-validation.md  native-slice-status.md
native/adapters/hash_table/include/hti/: hash_inspector.h
native/adapters/hash_table/src/: hash_inspector.c  hash_inspector_internal.h  hash_json.c  hash_snapshot.c
native/hash_table/include/hti/: hash_table.h
native/hash_table/src/: hash_table.c  hash_table_internal.h
native/inspection/include/hti/: inspection.h
native/inspection/src/: inspection_timeline.c
native/jni/: hash_inspector_jni.c
native/tests/: test_main.c
scripts/: test-native.sh
